--- a/public/index.html
+++ b/public/index.html
@@ -3,35 +3,37 @@
 <html lang="en">
   <head>
       <title>Js Sample</title>
-      <link rel="stylesheet" href="styles/style.css">
-      <link rel="stylesheet" href="styles/bootstrap-grid.min.css">
+      <link rel="stylesheet" href="./styles/style.css">
+      <link rel="stylesheet" href="./styles/bootstrap-grid.min.css">
       <meta charset="utf8">
   </head>
     <body>
 
         <div class="header">
-            <h2>مدیریت محصولات</h2>
-        </div>
-        <div class="container">
             <div class="container">
+                <h1>مدیریت محصولات</h1>
+            </div>
+        </div>
+        <div class="container main">
+
                 <input type="text" id="search-products" placeholder="جست و جو...">
                 <label>
                     <input type="checkbox" id="available-products" >
                     فقط کالای موجود
                 </label>
-                </br></br>
-                <select name="" id="sort">
-                    <option value="byEdited">مرتب سازی بر اساس آخرین تغییر</option>
-                    <option value="byCreated">مرتب سازی براساس زمان ایجاد</option>
-                </select>
-                </br></br>
+                <div class="sort">
+                    <select  id="sort">
+                        <option value="byEdited">مرتب سازی بر اساس آخرین تغییر</option>
+                        <option value="byCreated">مرتب سازی براساس زمان ایجاد</option>
+                    </select>
+                </div>
                 <form  id="add-product-form">
                     <input type="text" name="productTitle">
                     <input type="text" name="productPrice">
                     <button>افزودن</button>
                 </form>
                 <div id="products"></div>
-            </div>
+
         </div>
     </body>
 
